# USV-simulator

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
foxglove/: foxglove_usv_simulator.json
launch/: launcher.launch.py
rviz2_config/: usv_simulator.rviz
usv_simulator/: boat_control.py  boat_simulator.py
